syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.pix";
option java_outer_classname = "DesafioPix";
option objc_class_prefix = "HLW";

package br.com.zup.pix;

service DesafioPixService {

    rpc send (DesafioPixRequest) returns (DesafioPixReply) {}
}


message DesafioPixRequest {

    string idCliente = 1;

    enum TipoChave {
        DESCONHECIDA = 0;
        CPF = 1;
        CELULAR = 2;
        EMAIL = 3;
        CHAVE_ALEATORIA = 4;

    };

    TipoChave tipo_chave = 2;

    enum TipoConta {
        SEM_CONTA = 0;
        CONTA_CORRENTE = 1;
        CONTA_POUPANCA = 2;

    };

    TipoConta tipo_conta = 3;
    string chave = 4;
}


message DesafioPixReply {
    string idCliente = 1;
    string pixId = 2;
}

